--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"Chrome 89"
 	],
 	"dependencies": {
+		"@sveltejs/adapter-auto": "^2.0.0",
+		"daisyui": "^2.51.5",
 		"electron-context-menu": "^3.6.1",
 		"electron-reloader": "^1.2.3",
 		"electron-serve": "^1.1.0",
@@ -33,11 +35,12 @@
 		"@sveltejs/kit": "1.14.0",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
 		"@typescript-eslint/parser": "^5.56.0",
+		"autoprefixer": "^10.4.7",
 		"concurrently": "^7.6.0",
 		"cross-env": "^7.0.3",
 		"dotenv": "^16.0.3",
 		"electron": "^23.2.0",
-		"electron-builder": "^23.6.0",
+		"electron-builder": "^24.1.2",
 		"electron-connect": "^0.6.3",
 		"electron-packager": "^17.1.1",
 		"electron-updater": "^5.3.0",
@@ -45,12 +48,15 @@
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.14",
+		"postcss-load-config": "^4.0.1",
 		"prettier": "^2.8.7",
 		"prettier-plugin-svelte": "^2.10.0",
 		"sass": "^1.60.0",
 		"svelte": "^3.57.0",
 		"svelte-check": "^3.1.4",
-		"svelte-preprocess": "^5.0.3",
+		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.1.5",
 		"tslib": "^2.5.0",
 		"typescript": "^4.9.4",
 		"vite": "^4.0.4"
