added visitor count

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"electron-window-state": "^5.0.3"
 	},
 	"devDependencies": {
+		"electron-store": "^9.0.0",
 		"@sveltejs/adapter-static": "2.0.1",
 		"@sveltejs/kit": "1.14.0",
 		"@typescript-eslint/eslint-plugin": "^5.56.0",
